deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: nginx-deploy
    namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: container-vol
      volumes:
      - name: container-vol
        persistentVolumeClaim:
          claimName: local-pvc
