notes-app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notes-app-deploy
  namespace: nginx
  labels:
    app: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app:  notes-app
    spec:
      containers:
      - name:  notes-app-pod
        image: usman1978/k8s-django-notes:latest
        ports:
        - containerPort: 8000
